# mas_2025w_forest_fires

./: .gitignore  README.md  main.py  pyproject.toml  sim.ini
config/: __init__.py  config.py  neighborhood.py  preset.py  rule.py
sim/: __init__.py  neighborhood.py  preset.py  rule.py  simulation.py  state.py
visual/: __init__.py  backend.py  ppm.py  visualizer.py
