[project]
name = "fire_spreading"
version = "0.1.0"
description = "Group project 'Fire Spreading' of the Modeling and Simulation 2025W course"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "pillow>=12.1.0",
    "python-ffmpeg>=2.0.12",
]
